# cat_tongue

./: CHANGELOG.md  Cargo.toml  Dioxus.toml
assets/: main.css
src/: backend.rs  main.rs
src/components/: loading.rs
src/views/: catview.rs  favorites.rs
